--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -44,48 +44,66 @@
             <ul class="portfolio-list">
                 <li class="services-item">
                     <img class="services-img" src="../img/tekhnokryak.jpg" alt="Tekhnokryak">
+                    <div class="services-box">
                     <h2 class="services-caption">Технокряк</h2>
                     <p class="services-text">Веб-сайт</p>
+                </div>
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/new-orlean-vs-golden-star.jpg" alt="New-Orlean-vs-Golden-Star">
+                    <div class="services-box">
                     <h2 class="services-caption">Постер New Orlean vs Golden Star</h2>
                     <p class="services-text">Дизайн</p>
+                </div>
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/seafood.jpg" alt="Seafood">
+                    <div class="services-box">
                     <h2 class="services-caption">Ресторан Seafood</h2>
                     <p class="services-text">Додаток</p>
+                    </div>
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/prime.jpg" alt="Prime">
+                    <div class="services-box">
                     <h2 class="services-caption">Проєкт Prime</h2>
                     <p class="services-text">Маркетинг</p>
+                    </div>
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/boxes.jpg" alt="Boxes">
+                    <div class="services-box">
                     <h2 class="services-caption">Проєкт Boxes</h2>
                     <p class="services-text">Додаток</p>
+                    </div>
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/inspiration-has-no-borders.jpg" alt="Inspiration-has-no-Borders">
+                    <div class="services-box">
                     <h2 class="services-caption">Inspiration has no Borders</h2>
                     <p class="services-text">Веб-сайт</p>
+                    </div>
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/limited-edition.jpg" alt="Limited-Edition">
+                    <div class="services-box">
                     <h2 class="services-caption">Видання Limited Edition</h2>
                     <p class="services-text">Дизайн</p>
+                    </div>
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/lab.jpg" alt="LAB">
+                    <div class="services-box">
                     <h2 class="services-caption">Проєкт LAB</h2>
                     <p class="services-text">Маркетинг</p>
+                    </div>
                 </li>
                 <li class="services-item">
                     <img class="services-img" src="../img/growing-business.jpg" alt="Growing-Business">
+                    <div class="services-box">
                     <h2 class="services-caption">Growing Business</h2>
                     <p class="services-text">Додаток</p>
+                    </div>
                 </li>
             </ul>
         </div>
