--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </ul>
             </nav>
             <ul class="header-list">
-                <li class="header-item"><a class="header-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="header-item"><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li class="header-item"><a class="header-link" href="mailto:info@devstudio.com"><svg class="header-contact"><use href="./img/symbol-defs.svg#envelope"></use></svg><span class="header-cont">info@devstudio.com</span></a></li>
+                <li class="header-item"><a class="header-link" href="tel:+380961111111"><svg class="header-contact"><use href="./img/symbol-defs.svg#smartphone"></use></svg><span class="header-cont">+38 096 111 11 11</span></a></li>
             </ul>
         </div>
     </header>
@@ -46,7 +46,9 @@
             <div class="container">
                 <ul class="features-list">
                     <li class="features-item">
-                        
+                        <!-- <svg class="svg">
+                            <use href="./img/symbol-defs.svg#icon-antenna"></use>
+                        </svg> -->
                         <h3 class="features-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                         <p class="features-text">Ідейні міркування, і навіть початок повсякденної роботи з
                             формування
@@ -96,6 +98,20 @@
                             <h3 class="team-caption">Ігор Дем'яненко</h3>
                             <p class="team-text">Product Designer</p>
                         </div>
+                        <ul class="social">
+                            <li class="media"><a href="https://www.instagram.com/" class="team-link"><svg class="team-svg">
+                                <use href="./img/symbol-defs.svg#instagram"></use>
+                            </svg></a></li>
+                            <li class="media"><a href="https://x.com/?lang=ru" class="team-link"><svg class="team-svg">
+                                <use href="./img/symbol-defs.svg#twitter"></use>
+                            </svg></a></li></li>
+                            <li class="media"><a href="https://uk-ua.facebook.com/" class="team-link"><svg class="team-svg">
+                                <use href="./img/symbol-defs.svg#facebook"></use>
+                            </svg></a></li></li>
+                            <li class="media"><a href="https://ua.linkedin.com/" class="team-link"><svg class="team-svg">
+                                <use href="./img/symbol-defs.svg#linkedin"></use>
+                            </svg></a></li></li>
+                        </ul>
                         </li>
                         <li class="team-item">
                             <img width="270" class="team-img" src="./img/olga.jpg" alt="olga">
@@ -103,6 +119,20 @@
                             <h3 class="team-caption">Ольга Рєпіна</h3>
                             <p class="team-text">Frontend Developer</p>
                             </div>
+                            <ul class="social">
+                                <li class="media"><a href="https://www.instagram.com/" class="team-link"><svg class="team-svg">
+                                    <use href="./img/symbol-defs.svg#instagram"></use>
+                                </svg></a></li>
+                                <li class="media"><a href="https://x.com/?lang=ru" class="team-link"><svg class="team-svg">
+                                    <use href="./img/symbol-defs.svg#twitter"></use>
+                                </svg></a></li></li>
+                                <li class="media"><a href="https://uk-ua.facebook.com/" class="team-link"><svg class="team-svg">
+                                    <use href="./img/symbol-defs.svg#facebook"></use>
+                                </svg></a></li></li>
+                                <li class="media"><a href="https://ua.linkedin.com/" class="team-link"><svg class="team-svg">
+                                    <use href="./img/symbol-defs.svg#linkedin"></use>
+                                </svg></a></li></li>
+                            </ul>
                         </li>
                         <li class="team-item">
                             <img width="270" class="team-img" src="./img/mukola.jpg" alt="mukola">
@@ -110,6 +140,20 @@
                             <h3 class="team-caption">Микола Тарасов</h3>
                             <p class="team-text">Marketing</p>
                             </div>
+                            <ul class="social">
+                                <li class="media"><a href="https://www.instagram.com/" class="team-link"><svg class="team-svg">
+                                    <use href="./img/symbol-defs.svg#instagram"></use>
+                                </svg></a></li>
+                                <li class="media"><a href="https://x.com/?lang=ru" class="team-link"><svg class="team-svg">
+                                    <use href="./img/symbol-defs.svg#twitter"></use>
+                                </svg></a></li></li>
+                                <li class="media"><a href="https://uk-ua.facebook.com/" class="team-link"><svg class="team-svg">
+                                    <use href="./img/symbol-defs.svg#facebook"></use>
+                                </svg></a></li></li>
+                                <li class="media"><a href="https://ua.linkedin.com/" class="team-link"><svg class="team-svg">
+                                    <use href="./img/symbol-defs.svg#linkedin"></use>
+                                </svg></a></li></li>
+                            </ul>
                         </li>
                         <li class="team-item">
                             <img width="270" class="team-img" src="./img/muxaylo.jpg" alt="muxaylo">
@@ -117,6 +161,69 @@
                             <h3 class="team-caption">Михайло Єрмаков</h3>
                             <p class="team-text">UI Designer</p>
                             </div>
+                            <ul class="social">
+                                <li class="media"><a href="https://www.instagram.com/" class="team-link"><svg class="team-svg">
+                                    <use href="./img/symbol-defs.svg#instagram"></use>
+                                </svg></a></li>
+                                <li class="media"><a href="https://x.com/?lang=ru" class="team-link"><svg class="team-svg">
+                                    <use href="./img/symbol-defs.svg#twitter"></use>
+                                </svg></a></li></li>
+                                <li class="media"><a href="https://uk-ua.facebook.com/" class="team-link"><svg class="team-svg">
+                                    <use href="./img/symbol-defs.svg#facebook"></use>
+                                </svg></a></li></li>
+                                <li class="media"><a href="https://ua.linkedin.com/" class="team-link"><svg class="team-svg">
+                                    <use href="./img/symbol-defs.svg#linkedin"></use>
+                                </svg></a></li></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <section class="clients">
+                <div class="container">
+                    <h2 class="clients-title">Постійні клієнти</h2>
+                    <ul class="client-list">
+                        <li class="client-item">
+                            <a href="#" class="client-link">
+                                <svg class="client-icon">
+                                    <use href="./img/symbol-defs.svg#ya-co"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="#" class="client-link">
+                                <svg class="client-icon">
+                                    <use href="./img/symbol-defs.svg#ya-co"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="#" class="client-link">
+                                <svg class="client-icon">
+                                    <use href="./img/symbol-defs.svg#ya-co"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="#" class="client-link">
+                                <svg class="client-icon">
+                                    <use href="./img/symbol-defs.svg#ya-co"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="#" class="client-link">
+                                <svg class="client-icon">
+                                    <use href="./img/symbol-defs.svg#ya-co"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="client-item">
+                            <a href="#" class="client-link">
+                                <svg class="client-icon">
+                                    <use href="./img/symbol-defs.svg#ya-co"></use>
+                                </svg>
+                            </a>
                         </li>
                     </ul>
                 </div>
