--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -25,8 +25,8 @@
             </ul>
         </nav>
         <ul class="header-list">
-            <li class="header-item"><a class="header-link" href="malito:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="header-item"><a class="header-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="header-item"><a class="header-link" href="mailto:info@devstudio.com"><svg class="header-contact"><use href="../img/symbol-defs.svg#envelope"></use></svg><span class="header-cont">info@devstudio.com</span></a></li>
+            <li class="header-item"><a class="header-link" href="tel:+380961111111"><svg class="header-contact"><use href="../img/symbol-defs.svg#smartphone"></use></svg><span class="header-cont">+38 096 111 11 11</span></a></li>
         </ul>
     </div>
     </header>
