--- a/index.html
+++ b/index.html
@@ -193,35 +193,35 @@
                         <li class="client-item">
                             <a href="#" class="client-link">
                                 <svg class="client-icon">
-                                    <use href="./img/symbol-defs.svg#ya-co"></use>
+                                    <use href="./img/symbol-defs.svg#company"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="client-item">
                             <a href="#" class="client-link">
                                 <svg class="client-icon">
-                                    <use href="./img/symbol-defs.svg#ya-co"></use>
+                                    <use href="./img/symbol-defs.svg#company-apple"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="client-item">
                             <a href="#" class="client-link">
                                 <svg class="client-icon">
-                                    <use href="./img/symbol-defs.svg#ya-co"></use>
+                                    <use href="./img/symbol-defs.svg#foster"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="client-item">
                             <a href="#" class="client-link">
                                 <svg class="client-icon">
-                                    <use href="./img/symbol-defs.svg#ya-co"></use>
+                                    <use href="./img/symbol-defs.svg#brand"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="client-item">
                             <a href="#" class="client-link">
                                 <svg class="client-icon">
-                                    <use href="./img/symbol-defs.svg#ya-co"></use>
+                                    <use href="./img/symbol-defs.svg#tag-line"></use>
                                 </svg>
                             </a>
                         </li>
