--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
             </section>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-box">
+            <div>
                 <a class="footer-logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
                 <address class="addres">
                     <a class="footer-addres"
@@ -244,6 +245,40 @@
                                 11</a></li>
                     </ul>
                 </address>
+            </div>
+            <div>
+                <h2 class="footer-title">ПРИЄДНУЙТЕСЬ</h2>
+                    <ul class="footer-list">
+                        <li class="footer-item">
+                            <a href="https://www.instagram.com/" class="social-link">
+                                <svg class="footer-icon">
+                                    <use href="./img/symbol-defs.svg#instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-item">
+                            <a href="https://x.com/?lang=ru" class="social-link">
+                                <svg class="footer-icon">
+                                    <use href="./img/symbol-defs.svg#twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-item">
+                            <a href="https://uk-ua.facebook.com/" class="social-link">
+                                <svg class="footer-icon">
+                                    <use href="./img/symbol-defs.svg#facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-item">
+                            <a href="https://ua.linkedin.com/" class="social-link">
+                                <svg class="footer-icon">
+                                    <use href="./img/symbol-defs.svg#linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
         </div>
     </footer>
 </body>
