--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -16,19 +16,19 @@
 <body>
     <header class="header">
         <div class="container">
-        <nav class="header-nav">
-            <a class="header-logo" href="../index.html">Web<span class="header-span">Studio</span></a>
-            <ul class="nav-list">
-                <li class="nav-item"><a class="nav-link" href="../index.html">Студія</a></li>
-                <li class="nav-item"><a class="nav-link current" href="../pages/portfolio.html">Портфоліо</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
+            <nav class="header-nav">
+                <a class="header-logo" href="./index.html">Web<span class="header-span">Studio</span></a>
+                <ul class="nav-list">
+                    <li class="nav-item"><a class="nav-link" href="../index.html">Студія</a></li>
+                    <li class="nav-item"><a class="nav-link current" href="../pages/portfolio.html">Портфоліо</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
+                </ul>
+            </nav>
+            <ul class="header-list">
+                <li class="header-item"><a class="header-link" href="mailto:info@devstudio.com"><svg class="header-contact"><use href="../img/symbol-defs.svg#envelope"></use></svg><span class="header-cont">info@devstudio.com</span></a></li>
+                <li class="header-item"><a class="header-link" href="tel:+380961111111"><svg class="header-contact"><use href="../img/symbol-defs.svg#smartphone"></use></svg><span class="header-cont">+38 096 111 11 11</span></a></li>
             </ul>
-        </nav>
-        <ul class="header-list">
-            <li class="header-item"><a class="header-link" href="mailto:info@devstudio.com"><svg class="header-contact"><use href="../img/symbol-defs.svg#envelope"></use></svg><span class="header-cont">info@devstudio.com</span></a></li>
-            <li class="header-item"><a class="header-link" href="tel:+380961111111"><svg class="header-contact"><use href="../img/symbol-defs.svg#smartphone"></use></svg><span class="header-cont">+38 096 111 11 11</span></a></li>
-        </ul>
-    </div>
+        </div>
     </header>
 
     <main>
@@ -111,7 +111,8 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-box">
+            <div>
                 <a class="footer-logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
                 <address class="addres">
                     <a class="footer-addres"
@@ -125,6 +126,40 @@
                                 11</a></li>
                     </ul>
                 </address>
+            </div>
+            <div>
+                <h2 class="footer-title">ПРИЄДНУЙТЕСЬ</h2>
+                    <ul class="footer-list">
+                        <li class="footer-item">
+                            <a href="https://www.instagram.com/" class="social-link">
+                                <svg class="footer-icon">
+                                    <use href="../img/symbol-defs.svg#instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-item">
+                            <a href="https://x.com/?lang=ru" class="social-link">
+                                <svg class="footer-icon">
+                                    <use href="../img/symbol-defs.svg#twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-item">
+                            <a href="https://uk-ua.facebook.com/" class="social-link">
+                                <svg class="footer-icon">
+                                    <use href="../img/symbol-defs.svg#facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="footer-item">
+                            <a href="https://ua.linkedin.com/" class="social-link">
+                                <svg class="footer-icon">
+                                    <use href="../img/symbol-defs.svg#linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
         </div>
     </footer>
 
