--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-                <button type="button" class="hero-btn">Замовити послугу</button>
+                <button type="button" class="hero-btn" data-modal-open>Замовити послугу</button>
             </div>
         </section>
         <!-- секція функций -->
@@ -290,43 +290,59 @@
                 </div>
         </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-          <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
+          <button type="button" class="model-btn" data-modal-close>
+            <svg class="btn-svg">
+              <use href="./img/symbol-defs.svg#cross"></use>
+            </svg>
+          </button>
+          <h4 class="modal-title">Залиште свої дані, ми вам передзвонимо</h4>
           <form class="modal-form">
             <div class="modal-box">
-              <label class="modal-label">Ім'я
-                <input class="modal-input" type="text" required minlength="3" maxlength="20">
+              <label class="modal-lab">Ім'я
+                <input type="text" class="modal-inp" required />
               </label>
-              <svg class="modal-svg" width="20" height="20">
+              <svg class="model-svg">
                 <use href="./img/symbol-defs.svg#person"></use>
               </svg>
             </div>
             <div class="modal-box">
-              <label class="modal-label">Телефон
-                <input class="modal-input" type="tel" required minlength="6" maxlength="12"
-                  pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required />
+              <label class="modal-lab">Телефон
+                <input type="tel" class="modal-inp" required />
               </label>
-              <svg class="modal-svg" width="20" height="20">
+              <svg class="model-svg">
                 <use href="./img/symbol-defs.svg#phone"></use>
               </svg>
             </div>
             <div class="modal-box">
-              <label class="modal-label">Пошта
-                <input class="modal-input" type="email" required>
+              <label class="modal-lab">Пошта
+                <input type="email" class="modal-inp" required />
               </label>
-              <svg class="modal-svg" width="20" height="20">
+              <svg class="model-svg">
                 <use href="./img/symbol-defs.svg#mail"></use>
               </svg>
             </div>
-            <label class="modal-label">Коментар
-              <textarea name="Коментар" class="modal-coment"></textarea>
+            <label class="modal-lab">Коментар
+              <textarea
+                name="Коментар"
+                class="model-coment"
+                placeholder="Введіть текст"
+              ></textarea>
             </label>
-            <input type="checkbox" class="modal-checkbox" required>
-            <button type="submit">Відправити</button>
+            <div class="check">
+              <input type="checkbox" class="modal-chek" required />
+              <p class="check-text">Погоджуюся з розсилкою та приймаю
+                <a href="#" class="check-link">Умови договору</a>
+              </p>
+            </div>
           </form>
+          <div class="btn">
+            <button type="submit" class="check-btn">Відправити</button>
+          </div>
         </div>
       </div>
+      <script src="./js/modal.js"></script>
 </body>
 
 </html>
