--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
                             </svg></a></li>
                             <li class="media"><a href="https://x.com/?lang=ru" class="team-link"><svg class="team-svg">
                                 <use href="./img/symbol-defs.svg#twitter"></use>
-                            </svg></a></li></li>
+                            </svg></a></li>
                             <li class="media"><a href="https://uk-ua.facebook.com/" class="team-link"><svg class="team-svg">
                                 <use href="./img/symbol-defs.svg#facebook"></use>
-                            </svg></a></li></li>
+                            </svg></a></li>
                             <li class="media"><a href="https://ua.linkedin.com/" class="team-link"><svg class="team-svg">
                                 <use href="./img/symbol-defs.svg#linkedin"></use>
-                            </svg></a></li></li>
+                            </svg></a></li>
                         </ul>
                         </li>
                         <li class="team-item">
@@ -134,13 +134,13 @@
                                 </svg></a></li>
                                 <li class="media"><a href="https://x.com/?lang=ru" class="team-link"><svg class="team-svg">
                                     <use href="./img/symbol-defs.svg#twitter"></use>
-                                </svg></a></li></li>
+                                </svg></a></li>
                                 <li class="media"><a href="https://uk-ua.facebook.com/" class="team-link"><svg class="team-svg">
                                     <use href="./img/symbol-defs.svg#facebook"></use>
-                                </svg></a></li></li>
+                                </svg></a></li>
                                 <li class="media"><a href="https://ua.linkedin.com/" class="team-link"><svg class="team-svg">
                                     <use href="./img/symbol-defs.svg#linkedin"></use>
-                                </svg></a></li></li>
+                                </svg></a></li>
                             </ul>
                         </li>
                         <li class="team-item">
@@ -155,13 +155,13 @@
                                 </svg></a></li>
                                 <li class="media"><a href="https://x.com/?lang=ru" class="team-link"><svg class="team-svg">
                                     <use href="./img/symbol-defs.svg#twitter"></use>
-                                </svg></a></li></li>
+                                </svg></a></li>
                                 <li class="media"><a href="https://uk-ua.facebook.com/" class="team-link"><svg class="team-svg">
                                     <use href="./img/symbol-defs.svg#facebook"></use>
-                                </svg></a></li></li>
+                                </svg></a></li>
                                 <li class="media"><a href="https://ua.linkedin.com/" class="team-link"><svg class="team-svg">
                                     <use href="./img/symbol-defs.svg#linkedin"></use>
-                                </svg></a></li></li>
+                                </svg></a></li>
                             </ul>
                         </li>
                         <li class="team-item">
@@ -176,13 +176,13 @@
                                 </svg></a></li>
                                 <li class="media"><a href="https://x.com/?lang=ru" class="team-link"><svg class="team-svg">
                                     <use href="./img/symbol-defs.svg#twitter"></use>
-                                </svg></a></li></li>
+                                </svg></a></li>
                                 <li class="media"><a href="https://uk-ua.facebook.com/" class="team-link"><svg class="team-svg">
                                     <use href="./img/symbol-defs.svg#facebook"></use>
-                                </svg></a></li></li>
+                                </svg></a></li>
                                 <li class="media"><a href="https://ua.linkedin.com/" class="team-link"><svg class="team-svg">
                                     <use href="./img/symbol-defs.svg#linkedin"></use>
-                                </svg></a></li></li>
+                                </svg></a></li>
                             </ul>
                         </li>
                     </ul>
@@ -330,12 +330,12 @@
                 placeholder="Введіть текст"
               ></textarea>
             </label>
-            <div class="check">
+            <label class="check">
               <input type="checkbox" class="modal-chek" required />
               <p class="check-text">Погоджуюся з розсилкою та приймаю
                 <a href="#" class="check-link">Умови договору</a>
               </p>
-            </div>
+            </label>
           </form>
           <div class="modal-btn">
             <button type="submit" class="check-btn">Відправити</button>
