--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     </main>
     <footer class="footer">
         <div class="container footer-box">
-            <div>
+            <div class="footer-div">
                 <a class="footer-logo" href="./index.html">Web<span class="logo-footer">Studio</span></a>
                 <address class="addres">
                     <a class="footer-addres"
@@ -287,6 +287,19 @@
                             </a>
                         </li>
                     </ul>
+                </div>
+                <div class="newsletter">
+                    <form class="newsletter-form">
+                        <label class="newsletter-label">
+                            Підпишіться на розсилку
+                            <input type="text" placeholder="E-mail" class="newsletter-input">
+                        </label>
+                        <button class="newsletter-button">Підписатися
+                        <svg class="newsletter-svg">
+                            <use href="./img/symbol-defs.svg#telegram"></use>
+                        </svg>
+                        </button>
+                    </form>
                 </div>
         </div>
     </footer>
