--- a/index.html
+++ b/index.html
@@ -289,9 +289,9 @@
                     </ul>
                 </div>
                 <div class="newsletter">
+                    <h2 class="newsletter-title">Підпишіться на розсилку</h2>
                     <form class="newsletter-form">
                         <label class="newsletter-label">
-                            Підпишіться на розсилку
                             <input type="text" placeholder="E-mail" class="newsletter-input">
                         </label>
                         <button class="newsletter-button">Підписатися
