--- a/index.html
+++ b/index.html
@@ -292,9 +292,9 @@
                     <h2 class="newsletter-title">Підпишіться на розсилку</h2>
                     <form class="newsletter-form">
                         <label class="newsletter-label">
-                            <input type="text" placeholder="E-mail" class="newsletter-input">
+                            <input type="text" placeholder="E-mail" class="newsletter-input" required>
                         </label>
-                        <button class="newsletter-button">Підписатися
+                        <button class="newsletter-button" required>Підписатися
                         <svg class="newsletter-svg">
                             <use href="./img/symbol-defs.svg#telegram"></use>
                         </svg>
