--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -44,6 +44,9 @@
             <ul class="portfolio-list">
                 <li class="services-item">
                     <img class="services-img" src="../img/tekhnokryak.jpg" alt="Tekhnokryak">
+                    <div class="services-div">
+                        <p class="services-paragraph">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну особу.</p>
+                    </div>
                     <div class="services-box">
                     <h2 class="services-caption">Технокряк</h2>
                     <p class="services-text">Веб-сайт</p>
@@ -159,6 +162,19 @@
                             </a>
                         </li>
                     </ul>
+                </div>
+                <div class="newsletter">
+                    <h2 class="newsletter-title">Підпишіться на розсилку</h2>
+                    <form class="newsletter-form">
+                        <label class="newsletter-label">
+                            <input type="text" placeholder="E-mail" class="newsletter-input" required>
+                        </label>
+                        <button class="newsletter-button" required>Підписатися
+                        <svg class="newsletter-svg">
+                            <use href="../img/symbol-defs.svg#telegram"></use>
+                        </svg>
+                        </button>
+                    </form>
                 </div>
         </div>
     </footer>
